Fixed sermons card display on mobile

--- a/components/PastorProfile/profile.module.scss
+++ b/components/PastorProfile/profile.module.scss
@@ -8,6 +8,7 @@
     display: grid;
     grid-template-columns: auto 1fr;
     gap: 60px;
+    align-items: center;
     padding: 80px 95px;
     @include respond(mobile-screen) {
       display: flex;
@@ -19,10 +20,7 @@
   &__image {
     position: relative;
     height: 462px;
-    width: 500px;
-    & img {
-      border-radius: 8px;
-    }
+    width: 550px;
     @include respond(mobile-screen) {
       width: 100%;
       height: 250px;
